[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/main-menu-bg.png" type="Texture" id=1]
[ext_resource path="res://fonts/Amita/Amita-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Aclonica/Aclonica-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/GameOver.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.231373, 0.231373, 0.231373, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.560784, 0.560784, 0.560784, 1 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 533, 298 )
scale = Vector2( 1.064, 1.1037 )
texture = ExtResource( 1 )

[node name="TitleContainer" type="CenterContainer" parent="."]
margin_top = 140.0
margin_right = 1023.0
margin_bottom = 215.0

[node name="Title" type="Label" parent="TitleContainer"]
margin_left = 372.0
margin_right = 651.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0.917647, 0.054902, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Over!"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 278.0
margin_right = 1024.0
margin_bottom = 407.0

[node name="VBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 379.0
margin_top = 52.0
margin_right = 645.0
margin_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayAgain" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 130.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( -177, 163 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Play Again"

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 134.0
margin_right = 266.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( -177, 163 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
